<resources>
    <string name="app_name">Simple Alarm Clock</string>
    <string name="add_clock">Add clock</string>
    <string name="clearAll">Clear all</string>
    <string name="test" translatable="false">Test</string>
    <string name="choose_ringthone">Choose ringtone</string>
    <string name="choose_ringtone">Choose ringtone</string>
    <string name="system_ringtone">System ringtone</string>
    <string name="from_memory">From memory</string>
    <string name="choose_ringtone_type">Choose ringtone type</string>
    <string name="settings">Settings</string>
    <string name="ringtone_settings">Ringtone settings</string>
    <string name="screen_settings">Screen settings</string>
    <string name="volume">Volume level</string>
    <string name="select">Select</string>
    <string name="default_ring">default ring</string>
    <string name="pulse_count">Pulse count:</string>
    <string name="pulse_duration">Pulse duration:</string>
    <string name="interpolator_label">Select type of animation interpolator</string>
    <string name="Linear">Linear</string>
    <string name="Accelerate">Accelerate</string>
    <string name="Decelerate">Decelerate</string>
    <string name="AccelerateDecelerate">Accelerate-Decelerate</string>
    <string name="type_of_ringtone">Type of ringtone</string>
    <string name="ringtone_name">Ringtone name</string>
    <string name="pulsation">Pulsation</string>
    <string name="turn_off_button">Turn off button</string>
</resources>
