<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView">


    <ImageView
        android:id="@+id/blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.valentinekuzmich.simplealarmclock.Utils.FixedPulsatorLayout
        android:id="@+id/pulsatorTest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:pulse_count="4"
        app:pulse_duration="7000"
        app:pulse_repeat="0"
        app:pulse_color="@color/colorAccent"
        app:pulse_startFromScratch="false"
        app:pulse_interpolator="Linear">

        <TextView
            android:id="@+id/timeTextViewTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nesobrite_font_bold"
            android:layout_above="@+id/off_test"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="@dimen/main_clock_time_size" />
        <ImageView
            android:id="@+id/off_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/off_button_drawable"
            app:srcCompat="@drawable/close" />

    </com.valentinekuzmich.simplealarmclock.Utils.FixedPulsatorLayout>


</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ring_screen_settings_bottom_tab_padding"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="end|top"
        android:layout_alignParentBottom="true"
        android:id="@+id/settingsView">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/subheading_text_size"
            android:fontFamily="@font/roboto_regular"
            android:background="@android:color/transparent"
            android:text="@string/pulse_count"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:id="@+id/pulse_count"
                />
        </TableRow>
        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/countSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/subheading_text_size"
            android:fontFamily="@font/roboto_regular"
            android:background="@android:color/transparent"
            android:text="@string/pulse_duration"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:id="@+id/pulse_duration"
                />
        </TableRow>
        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/durationSeekBar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textSize="@dimen/subheading_text_size"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/interpolator_label"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:id="@+id/interpolator_chooser">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_interpolator"
                android:text="@string/Linear"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/accelerate_interpolator"
                android:text="@string/Accelerate"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decelerate_interpolator"
                android:text="@string/Decelerate"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/accelerateDecelerate_interpolator"
                android:text="@string/AccelerateDecelerate"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="end|top"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:id="@+id/colorSettings">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/pulsation"
            android:fontFamily="@font/roboto_medium"
            android:background="@color/white"
            android:id="@+id/pulsationLabel"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:trackTint="@color/color_switcher_track"
            android:id="@+id/colorSwitcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_off_button"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/roboto_medium"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:id="@+id/closeButtonLabel"/>
        </RelativeLayout>
        <com.larswerkman.holocolorpicker.ColorPicker
            android:id="@+id/picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <com.larswerkman.holocolorpicker.SVBar
            android:id="@+id/svbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/slideFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:layout_above="@id/settingsView"
        app:srcCompat="@drawable/tune"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/colorSlideFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/colorSettings"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|start"
        app:srcCompat="@drawable/palette" />
</android.support.design.widget.CoordinatorLayout>